# secretlink

./: Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: ci.yml
.sqlx/: query-3b7ec6fdcc692f1790ff2c44ab1b6428c9f9c51a26d6dcab922b3325434843cb.json  query-4f1fae97352038571fbf64a2f3c869215c6a5957268618e19cb88bc3440a0e9c.json  query-56ed7ac1d0bcc0d5d30b229e2b5efd29ad00a43b1ce7b65dc1e273928a39536a.json  query-fa04a8b99d558cdeb8de5463b658e5fc434efb7fa914aa664a9e1b5880093fc7.json
migrations/: 20240914135613_init.sql  20250322115332_null-secret.sql  20250322181134_add-iv-column.sql
src/: main.rs  secret.rs  templates.rs  traces.rs
templates/: about.html  base.html  consume.html  goto.html  how-it-works.html  index.html  privacy.html  result.html
