[package]
name = "secretlink"
version = "0.3.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5" }
axum_static = "1.7.1"
base64 = "0.22.1"
dotenv = "0.15.0"
miette = { version = "7.2.0", features = ["fancy"] }
opentelemetry = "0.25.0"
opentelemetry-appender-tracing = "0.25.0"
opentelemetry-otlp = { version = "0.25.0", features = [
	"http-proto",
	"reqwest-client",
	"reqwest-rustls",
] }
opentelemetry-semantic-conventions = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio", "logs"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
	"postgres",
	"runtime-tokio",
	"time",
	"tls-rustls-ring",
	"uuid",
	"migrate",
] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1.40"
tracing-axiom = "0.7.0"
tracing-core = "0.1.32"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
